--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -58,7 +58,7 @@ body {
 
 /* header */
 #header {
-    background: url('../Photos/cpu.jpg') top/ cover no-repeat;
+    background: url('../Photos/wp3403187-blue-abstract-1080p-wallpapers.jpg') top/ cover no-repeat;
 }
 
 .carousel-inner h1 {
@@ -127,7 +127,7 @@ body {
 
 /* Offers */
 #offers {
-    background: url(../Photos/map.jpg) center/ cover no-repeat;
+    background: url(../Photos/wp6580162.jpg) center/ cover no-repeat;
 }
 
 #offers .row {
