--- a/CSS/aboutUs.css
+++ b/CSS/aboutUs.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+
 *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
@@ -104,7 +107,6 @@ body{
     flex-direction: column;
     width: 95%;
     color: #009688;
-    letter-spacing: 5px;
 }
 
 .review-box-container{
