--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .contact{
@@ -13,7 +16,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: url(../Photos/cpu.jpg);
+    background: url(../Photos/R.jpg);
     background-size:cover;
 }
 
